[gd_scene load_steps=6 format=3 uid="uid://ckna57c3o3j71"]

[ext_resource type="Script" path="res://amorgus.gd" id="1_ck0om"]
[ext_resource type="AudioStream" uid="uid://bo0gvnacv0tmq" path="res://music.mp3" id="2_pvu24"]
[ext_resource type="AudioStream" uid="uid://dcgi2qoemc67l" path="res://sfx.mp3" id="3_g16vb"]
[ext_resource type="Texture2D" uid="uid://dkwd4oxaitouk" path="res://amoogus.jpg" id="4_f40j1"]
[ext_resource type="Texture2D" uid="uid://cydnqt5y8080k" path="res://bad.jpg" id="5_f1ktv"]

[node name="amoogus" type="Node2D"]

[node name="Button4" type="Button" parent="."]
offset_left = 615.0
offset_top = 918.0
offset_right = 775.0
offset_bottom = 999.0
text = "no spam"

[node name="Button3" type="Button" parent="."]
offset_left = 617.0
offset_top = 558.0
offset_right = 777.0
offset_bottom = 639.0
text = "no music"

[node name="Button2" type="Button" parent="."]
offset_left = 644.0
offset_top = 351.0
offset_right = 804.0
offset_bottom = 432.0
text = "no give meme"

[node name="Button" type="Button" parent="."]
offset_left = 632.0
offset_top = 55.0
offset_right = 792.0
offset_bottom = 136.0
text = "no essay generator"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
z_index = -5
offset_left = 11.0
offset_top = -1.0
offset_right = 559.0
offset_bottom = 1294.0
script = ExtResource("1_ck0om")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_pvu24")

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_g16vb")

[node name="Amoogus" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(333, 524)
texture = ExtResource("4_f40j1")

[node name="Bad" type="Sprite2D" parent="."]
z_index = -12
position = Vector2(400, 609)
scale = Vector2(0.552344, 0.961111)
texture = ExtResource("5_f1ktv")

[connection signal="pressed" from="Button4" to="RichTextLabel" method="_on_button_4_pressed"]
[connection signal="pressed" from="Button3" to="RichTextLabel" method="_on_button_3_pressed"]
[connection signal="pressed" from="Button2" to="RichTextLabel" method="_on_button_2_pressed"]
[connection signal="pressed" from="Button" to="RichTextLabel" method="_on_button_pressed"]
